--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "app",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://your-username.github.io/Fresh-Cart",
+"homepage": "https://hoorashraf.github.io/personal-portfolio",
+
   "type": "module",
   "scripts": {
     "dev": "vite",
