--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "version": "0.0.0",
   "homepage": "https://hoorashraf.github.io/personal-portfolio",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+ "scripts": {
+  "dev": "vite",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist",
+  "start": "vite preview",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview"
+}
+
   "dependencies": {
     "@fontsource/encode-sans-expanded": "^5.1.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
